--- a/index.html
+++ b/index.html
@@ -1,46 +1,98 @@
 <!doctype html>
 <html lang="en" style="height: 100%">
-    <head>
-        <meta charset="utf-8" />
-        <meta
-            name="viewport"
-            content="width=device-width,initial-scale=1,maximum-scale=1" />
-        <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
-        <link
-            rel="apple-touch-icon"
-            sizes="180x180"
-            href="/apple-touch-icon.png" />
-        <link
-            rel="icon"
-            type="image/png"
-            href="/favicon-32x32.png"
-            sizes="32x32" />
-        <link
-            rel="icon"
-            type="image/png"
-            href="/favicon-16x16.png"
-            sizes="16x16" />
-        <link rel="manifest" href="/manifest.json" />
-        <link property="image" href="/boltz-preview.jpg" />
-        <meta property="og:image" content="/boltz-preview.jpg" />
-        <meta property="twitter:image" content="/boltz-preview.jpg" />
-        <meta
-            name="description"
-            content="Boltz is a Privacy First, Non-Custodial Bitcoin Exchange and Lightning Service Provider" />
-        <meta name="mobile-web-app-capable" content="yes" />
-        <title>Boltz</title>
-        <style>
-            .loading {
-                background: url(/boltz.svg) no-repeat center #142840;
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
+    <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
+    <link rel="manifest" href="/manifest.json" />
+    <link property="image" href="/boltz-preview.jpg" />
+    <meta property="og:image" content="/boltz-preview.jpg" />
+    <meta property="twitter:image" content="/boltz-preview.jpg" />
+    <meta name="description"
+        content="Boltz is a Privacy First, Non-Custodial Bitcoin Exchange and Lightning Service Provider" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <title>Boltz</title>
+    <style>
+        .spinner {
+            margin: 32px auto;
+            text-align: center;
+        }
+
+        .spinner>div {
+            width: 26px;
+            height: 26px;
+            margin: 0 7px;
+            background-color: black;
+
+            border-radius: 100%;
+            display: inline-block;
+            -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+            animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+        }
+
+        .spinner .bounce1 {
+            -webkit-animation-delay: -0.32s;
+            animation-delay: -0.32s;
+        }
+
+        .spinner .bounce2 {
+            -webkit-animation-delay: -0.16s;
+            animation-delay: -0.16s;
+        }
+
+        @-webkit-keyframes sk-bouncedelay {
+
+            0%,
+            80%,
+            100% {
+                -webkit-transform: scale(0);
             }
-        </style>
-    </head>
-    <body class="loading">
-        <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
-        <script src="/src/index.jsx" type="module"></script>
-        <script
-            src="/node_modules/iframe-resizer/js/iframeResizer.contentWindow.js"
-            type="module"></script>
-    </body>
+
+            40% {
+                -webkit-transform: scale(1);
+            }
+        }
+
+        @keyframes sk-bouncedelay {
+
+            0%,
+            80%,
+            100% {
+                -webkit-transform: scale(0);
+                transform: scale(0);
+            }
+
+            40% {
+                -webkit-transform: scale(1);
+                transform: scale(1);
+            }
+        }
+
+        .initial-loader {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 200px;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="initial-loader">
+        <div class="spinner">
+            <div class="bounce1"></div>
+            <div class="bounce2"></div>
+            <div class="bounce3"></div>
+        </div>
+    </div>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <script src="/src/index.jsx" type="module"></script>
+    <script src="/node_modules/iframe-resizer/js/iframeResizer.contentWindow.js" type="module"></script>
+</body>
+
 </html>
